<resources>
    <string name="app_name">Lab1_Kirpichenko</string>
    <string name="zero">00:00:00</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="button">BUTTON</string>
    <string name="xml_layout">XML layout</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multy">*</string>
    <string name="procent">%</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="backstabslah">/</string>
</resources>